--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "module": "./lib/index.js",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json && copyfiles -u 1 src/**/*.jison lib/"
   },
   "author": "Conservation Biology Institute",
   "license": "MIT",
   "devDependencies": {
+    "react": "16.9.x",
+    "react-dom": "16.9.x",
+    "react-redux": "7.2.x",
+    "redux": "4.0.x",
+    "redux-thunk": "2.3.x",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/leaflet": "^1.5.17",
     "@types/node": "^14.11.8",
@@ -20,6 +25,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "copyfiles": "^2.4.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
@@ -34,7 +40,7 @@
   "dependencies": {
     "bulma": "^0.9.1",
     "bulma-checkradio": "^1.1.1",
-    "isomorphic-fetch": "^3.0.0",
+    "isomorphic-fetch": "^2.2.1",
     "jison": "^0.4.18",
     "leaflet": "^1.7.1",
     "leaflet-basemaps": "^0.3.4",
@@ -45,12 +51,7 @@
     "leaflet.vectorgrid": "^1.3.0",
     "lethargy": "^1.0.9",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.2.1",
     "react-tooltip": "^4.2.10",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
     "shpjs": "^3.6.0",
     "uuid": "^8.3.1"
   }
