--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "module": "./lib/index.js",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json && copyfiles -u 1 src/**/*.jison lib/"
+    "build": "tsc -p tsconfig.json && copyfiles -u 1 src/**/*.jison lib/",
+    "start": "tsc -w -p tsconfig.json"
   },
   "author": "Conservation Biology Institute",
   "license": "MIT",
