--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
   "author": "Conservation Biology Institute",
   "license": "MIT",
   "devDependencies": {
-    "react": "16.9.x",
-    "react-dom": "16.9.x",
-    "react-redux": "7.2.x",
-    "redux": "4.0.x",
-    "redux-thunk": "2.3.x",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/leaflet": "^1.5.17",
     "@types/node": "^14.11.8",
@@ -36,11 +31,18 @@
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.0.0",
     "prettier": "^2.1.2",
+    "react": "16.9.x",
+    "react-dom": "16.9.x",
+    "react-redux": "7.2.x",
+    "redux": "4.0.x",
+    "redux-thunk": "2.3.x",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "bulma": "^0.9.1",
     "bulma-checkradio": "^1.1.1",
+    "csv-parse": "^4.15.3",
+    "csv-stringify": "^5.6.2",
     "isomorphic-fetch": "^2.2.1",
     "jison": "^0.4.18",
     "leaflet": "^1.7.1",
